# slurm-tui

./: README.md  pyproject.toml
scripts/: attach_slurm_job.sh  batch_slurm_job.sh  cancel_slurm_job.sh  check_slurm_gpu_hours.sh  create_slurm_job.sh  interactive_slurm_job.sh  show_alloc_gpus.sh  sync_to_kiz_rsync.sh
src/slurm_tui/: __init__.py  __main__.py  app.py
src/slurm_tui/screens/: __init__.py  bookmarks.py  editor.py  job_submit.py  log_viewer.py  main.py  terminal.py
src/slurm_tui/utils/: __init__.py  bookmarks.py  clipboard.py  gpu.py  log_reader.py  quota.py  slurm.py
src/slurm_tui/widgets/: __init__.py  console.py  disk_quota.py  gpu_hours.py  gpu_monitor.py  job_details.py  job_table.py
